2006-05-11  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (load_icon): Try to load icons in both the program's
	datadir, and the pixmaps dir
	* ui/Makefile.am: install cellphone.png in both $(datadir)/pixmaps
	and $(datadir)/gnome-phone-manager (Closes: #341385)

============ Version 0.7

2006-05-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: version 0.7
	* src/ui.c: (dequeue_message): some build fixes, and made the code
	more glib-y
	* NEWS: upd

2006-05-03  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added "fi" to ALL_LINGUAS

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/nb.po: Updated Norwegian bokmål translation.
	* po/no.po: Remove the old one.

2006-03-31  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* libgsm/gnokii-identify.c: (tell_driver):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect),
	(phonemgr_listener_disconnect), (phonemgr_listener_queue_message),
	(phonemgr_listener_poll_real):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_driver_for_model),
	(phonemgr_utils_guess_driver), (phonemgr_utils_connect),
	(phonemgr_utils_disconnect), (phonemgr_utils_free):
	* libgsm/phonemgr-utils.h:
	* src/connection.c: (set_connection_device):
	Add new convenience structs and functions to connect to the phone
	using gnokii, and avoid reconnecting to the phone if the default
	driver is already the one being used (Closes: #312278)

2006-02-01  Bastien Nocera  <hadess@hadess.net>

	* configure.in: add gmodule-2.0 to the needed libraries, to get
	-rdynamic and avoid the entry not showing up

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.

2005-12-28  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (main): fix the _connect functions to be
	called with the right number of arguments

2005-12-27  Bastien Nocera  <hadess@hadess.net>

	* ui/.cvsignore: